// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Deck Template Registry Snapshots > should match builtin deck templates snapshot 1`] = `
[
  "template:arranger",
  "template:carnatic",
  "template:carnatic_board",
  "template:celtic",
  "template:celtic_board",
  "template:chinese",
  "template:chinese_board",
  "template:film_board",
  "template:galant_board",
  "template:harmony",
  "template:lcc_board",
  "template:phrase",
  "template:theory",
  "template:tracker_assistance",
  "template:world_music",
]
`;

exports[`Deck Template Registry Snapshots > should match deck template board types snapshot 1`] = `
[
  "arranger",
  "harmony",
  "notation",
  "phrase",
  "tracker",
]
`;

exports[`Deck Template Registry Snapshots > should match deck template card IDs snapshot 1`] = `
[
  "schema:browser",
  "schema:constraint",
  "schema:to_bass",
  "schema:to_chords",
  "schema:to_melody",
  "schema:variation",
  "theory:bodhran",
  "theory:carnatic_raga_tala",
  "theory:celtic_tune",
  "theory:chinese_mode",
  "theory:constraint_pack",
  "theory:drone",
  "theory:erhu_ornament",
  "theory:film_scoring",
  "theory:grouping",
  "theory:guzheng_gliss",
  "theory:heterophony",
  "theory:korvai_generator",
  "theory:leitmotif_library",
  "theory:leitmotif_matcher",
  "theory:lydian_chromatic",
  "theory:meter_accent",
  "theory:mridangam_pattern",
  "theory:ornament_generator",
  "theory:schema",
  "theory:tonality_model",
  "theory:trailer_build",
]
`;

exports[`Deck Template Registry Snapshots > should match deck template categories snapshot 1`] = `
[
  "arranger",
  "harmony",
  "phrase",
  "theory",
  "tracker",
  "world",
]
`;

exports[`Deck Template Registry Snapshots > should match deck template metadata snapshot 1`] = `
[
  {
    "boardTypes": [
      "arranger",
    ],
    "boardTypesCount": 1,
    "cardIdsCount": 4,
    "category": "arranger",
    "culturesCount": 2,
    "displayName": "Arranger Deck",
    "hasNamespace": true,
    "id": "template:arranger",
    "namespace": "template",
    "priority": 85,
    "slotsCount": 4,
    "stylesCount": 4,
  },
  {
    "boardTypes": [
      "notation",
      "phrase",
      "tracker",
    ],
    "boardTypesCount": 3,
    "cardIdsCount": 2,
    "category": "world",
    "culturesCount": 2,
    "displayName": "Carnatic Deck",
    "hasNamespace": true,
    "id": "template:carnatic",
    "namespace": "template",
    "priority": 85,
    "slotsCount": 2,
    "stylesCount": 1,
  },
  {
    "boardTypes": [
      "notation",
      "tracker",
    ],
    "boardTypesCount": 2,
    "cardIdsCount": 5,
    "category": "tracker",
    "culturesCount": 1,
    "displayName": "Carnatic Board",
    "hasNamespace": true,
    "id": "template:carnatic_board",
    "namespace": "template",
    "priority": 80,
    "slotsCount": 5,
    "stylesCount": 3,
  },
  {
    "boardTypes": [
      "notation",
      "phrase",
      "tracker",
    ],
    "boardTypesCount": 3,
    "cardIdsCount": 3,
    "category": "world",
    "culturesCount": 2,
    "displayName": "Celtic Deck",
    "hasNamespace": true,
    "id": "template:celtic",
    "namespace": "template",
    "priority": 85,
    "slotsCount": 3,
    "stylesCount": 1,
  },
  {
    "boardTypes": [
      "notation",
      "tracker",
    ],
    "boardTypesCount": 2,
    "cardIdsCount": 5,
    "category": "tracker",
    "culturesCount": 1,
    "displayName": "Celtic Board",
    "hasNamespace": true,
    "id": "template:celtic_board",
    "namespace": "template",
    "priority": 75,
    "slotsCount": 5,
    "stylesCount": 3,
  },
  {
    "boardTypes": [
      "arranger",
      "notation",
      "phrase",
      "tracker",
    ],
    "boardTypesCount": 4,
    "cardIdsCount": 2,
    "category": "world",
    "culturesCount": 2,
    "displayName": "Chinese Deck",
    "hasNamespace": true,
    "id": "template:chinese",
    "namespace": "template",
    "priority": 85,
    "slotsCount": 2,
    "stylesCount": 1,
  },
  {
    "boardTypes": [
      "notation",
      "tracker",
    ],
    "boardTypesCount": 2,
    "cardIdsCount": 5,
    "category": "tracker",
    "culturesCount": 1,
    "displayName": "Chinese Board",
    "hasNamespace": true,
    "id": "template:chinese_board",
    "namespace": "template",
    "priority": 75,
    "slotsCount": 5,
    "stylesCount": 3,
  },
  {
    "boardTypes": [
      "arranger",
      "notation",
      "tracker",
    ],
    "boardTypesCount": 3,
    "cardIdsCount": 6,
    "category": "arranger",
    "culturesCount": 2,
    "displayName": "Film Scoring Board",
    "hasNamespace": true,
    "id": "template:film_board",
    "namespace": "template",
    "priority": 85,
    "slotsCount": 6,
    "stylesCount": 3,
  },
  {
    "boardTypes": [
      "harmony",
      "notation",
      "phrase",
    ],
    "boardTypesCount": 3,
    "cardIdsCount": 8,
    "category": "phrase",
    "culturesCount": 1,
    "displayName": "Galant Workspace",
    "hasNamespace": true,
    "id": "template:galant_board",
    "namespace": "template",
    "priority": 75,
    "slotsCount": 7,
    "stylesCount": 3,
  },
  {
    "boardTypes": [
      "arranger",
      "harmony",
      "notation",
    ],
    "boardTypesCount": 3,
    "cardIdsCount": 3,
    "category": "harmony",
    "culturesCount": 2,
    "displayName": "Harmony Deck",
    "hasNamespace": true,
    "id": "template:harmony",
    "namespace": "template",
    "priority": 75,
    "slotsCount": 3,
    "stylesCount": 7,
  },
  {
    "boardTypes": [
      "arranger",
      "notation",
    ],
    "boardTypesCount": 2,
    "cardIdsCount": 4,
    "category": "harmony",
    "culturesCount": 2,
    "displayName": "Lydian Chromatic Board",
    "hasNamespace": true,
    "id": "template:lcc_board",
    "namespace": "template",
    "priority": 70,
    "slotsCount": 4,
    "stylesCount": 3,
  },
  {
    "boardTypes": [
      "notation",
      "phrase",
      "tracker",
    ],
    "boardTypesCount": 3,
    "cardIdsCount": 3,
    "category": "phrase",
    "culturesCount": 2,
    "displayName": "Phrase Deck",
    "hasNamespace": true,
    "id": "template:phrase",
    "namespace": "template",
    "priority": 80,
    "slotsCount": 3,
    "stylesCount": 6,
  },
  {
    "boardTypes": [
      "arranger",
      "harmony",
      "notation",
      "phrase",
      "tracker",
    ],
    "boardTypesCount": 5,
    "cardIdsCount": 5,
    "category": "theory",
    "culturesCount": 2,
    "displayName": "Theory Deck",
    "hasNamespace": true,
    "id": "template:theory",
    "namespace": "template",
    "priority": 90,
    "slotsCount": 4,
    "stylesCount": 10,
  },
  {
    "boardTypes": [
      "tracker",
    ],
    "boardTypesCount": 1,
    "cardIdsCount": 3,
    "category": "tracker",
    "culturesCount": 2,
    "displayName": "Tracker Assistance Deck",
    "hasNamespace": true,
    "id": "template:tracker_assistance",
    "namespace": "template",
    "priority": 70,
    "slotsCount": 3,
    "stylesCount": 4,
  },
  {
    "boardTypes": [
      "arranger",
      "notation",
      "phrase",
      "tracker",
    ],
    "boardTypesCount": 4,
    "cardIdsCount": 5,
    "category": "world",
    "culturesCount": 4,
    "displayName": "World Music Deck",
    "hasNamespace": true,
    "id": "template:world_music",
    "namespace": "template",
    "priority": 60,
    "slotsCount": 5,
    "stylesCount": 1,
  },
]
`;

exports[`Deck Template Registry Snapshots > should match registered deck template IDs snapshot 1`] = `
[
  "template:arranger",
  "template:carnatic",
  "template:carnatic_board",
  "template:celtic",
  "template:celtic_board",
  "template:chinese",
  "template:chinese_board",
  "template:film_board",
  "template:galant_board",
  "template:harmony",
  "template:lcc_board",
  "template:phrase",
  "template:theory",
  "template:tracker_assistance",
  "template:world_music",
]
`;

exports[`Deck Template Registry Snapshots > should match template slot structure snapshot 1`] = `
[
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:film_scoring",
        "hasAlternatives": false,
        "label": "Film Scoring",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:tonality_model",
        "hasAlternatives": false,
        "label": "Tonality",
        "position": 1,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:meter_accent",
        "hasAlternatives": false,
        "label": "Meter",
        "position": 2,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 3,
        "required": false,
      },
    ],
    "templateId": "template:arranger",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:carnatic_raga_tala",
        "hasAlternatives": false,
        "label": "Raga/Tala",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:meter_accent",
        "hasAlternatives": false,
        "label": "Meter",
        "position": 1,
        "required": false,
      },
    ],
    "templateId": "template:carnatic",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:carnatic_raga_tala",
        "hasAlternatives": false,
        "label": "Raga/Tala",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:drone",
        "hasAlternatives": false,
        "label": "Drone",
        "position": 1,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:mridangam_pattern",
        "hasAlternatives": false,
        "label": "Mridangam",
        "position": 2,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:korvai_generator",
        "hasAlternatives": false,
        "label": "Korvai",
        "position": 3,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 4,
        "required": false,
      },
    ],
    "templateId": "template:carnatic_board",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:celtic_tune",
        "hasAlternatives": false,
        "label": "Tune Type",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:meter_accent",
        "hasAlternatives": false,
        "label": "Meter",
        "position": 1,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:grouping",
        "hasAlternatives": false,
        "label": "Grouping",
        "position": 2,
        "required": false,
      },
    ],
    "templateId": "template:celtic",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:celtic_tune",
        "hasAlternatives": false,
        "label": "Tune Type",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:ornament_generator",
        "hasAlternatives": false,
        "label": "Ornaments",
        "position": 1,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:bodhran",
        "hasAlternatives": false,
        "label": "Bodhrán",
        "position": 2,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:drone",
        "hasAlternatives": false,
        "label": "Drone",
        "position": 3,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 4,
        "required": false,
      },
    ],
    "templateId": "template:celtic_board",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:chinese_mode",
        "hasAlternatives": false,
        "label": "Mode",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:meter_accent",
        "hasAlternatives": false,
        "label": "Meter",
        "position": 1,
        "required": false,
      },
    ],
    "templateId": "template:chinese",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:chinese_mode",
        "hasAlternatives": false,
        "label": "Mode",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:heterophony",
        "hasAlternatives": false,
        "label": "Heterophony",
        "position": 1,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:guzheng_gliss",
        "hasAlternatives": false,
        "label": "Guzheng",
        "position": 2,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:erhu_ornament",
        "hasAlternatives": false,
        "label": "Erhu",
        "position": 3,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 4,
        "required": false,
      },
    ],
    "templateId": "template:chinese_board",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:film_scoring",
        "hasAlternatives": false,
        "label": "Film Scoring",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 1,
        "cardId": "theory:trailer_build",
        "hasAlternatives": true,
        "label": "Trailer Build",
        "position": 1,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:leitmotif_library",
        "hasAlternatives": false,
        "label": "Leitmotif Library",
        "position": 2,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:leitmotif_matcher",
        "hasAlternatives": false,
        "label": "Leitmotif Matcher",
        "position": 3,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:tonality_model",
        "hasAlternatives": false,
        "label": "Tonality Model",
        "position": 4,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 5,
        "required": false,
      },
    ],
    "templateId": "template:film_board",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "schema:browser",
        "hasAlternatives": false,
        "label": "Schema Browser",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "schema:to_chords",
        "hasAlternatives": false,
        "label": "Schema to Chords",
        "position": 1,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "schema:to_melody",
        "hasAlternatives": false,
        "label": "Schema to Melody",
        "position": 2,
        "required": true,
      },
      {
        "alternativesCount": 1,
        "cardId": "schema:variation",
        "hasAlternatives": true,
        "label": "Variation",
        "position": 3,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "schema:constraint",
        "hasAlternatives": false,
        "label": "Constraints",
        "position": 4,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:grouping",
        "hasAlternatives": false,
        "label": "Grouping",
        "position": 5,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:tonality_model",
        "hasAlternatives": false,
        "label": "Tonality",
        "position": 6,
        "required": false,
      },
    ],
    "templateId": "template:galant_board",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:tonality_model",
        "hasAlternatives": false,
        "label": "Tonality Model",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:schema",
        "hasAlternatives": false,
        "label": "Schema",
        "position": 1,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:meter_accent",
        "hasAlternatives": false,
        "label": "Meter & Accent",
        "position": 2,
        "required": false,
      },
    ],
    "templateId": "template:harmony",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:lydian_chromatic",
        "hasAlternatives": false,
        "label": "Lydian Chromatic",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:tonality_model",
        "hasAlternatives": false,
        "label": "Tonality Model",
        "position": 1,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:schema",
        "hasAlternatives": false,
        "label": "Schema",
        "position": 2,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 3,
        "required": false,
      },
    ],
    "templateId": "template:lcc_board",
  },
  {
    "slots": [
      {
        "alternativesCount": 1,
        "cardId": "theory:schema",
        "hasAlternatives": true,
        "label": "Schema",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:grouping",
        "hasAlternatives": false,
        "label": "Grouping",
        "position": 1,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 2,
        "required": false,
      },
    ],
    "templateId": "template:phrase",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:tonality_model",
        "hasAlternatives": false,
        "label": "Tonality Model",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:meter_accent",
        "hasAlternatives": false,
        "label": "Meter & Accent",
        "position": 1,
        "required": true,
      },
      {
        "alternativesCount": 1,
        "cardId": "theory:grouping",
        "hasAlternatives": true,
        "label": "Phrase Grouping",
        "position": 2,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 3,
        "required": false,
      },
    ],
    "templateId": "template:theory",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:grouping",
        "hasAlternatives": false,
        "label": "Grouping",
        "position": 0,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:meter_accent",
        "hasAlternatives": false,
        "label": "Meter",
        "position": 1,
        "required": true,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 2,
        "required": false,
      },
    ],
    "templateId": "template:tracker_assistance",
  },
  {
    "slots": [
      {
        "alternativesCount": 0,
        "cardId": "theory:carnatic_raga_tala",
        "hasAlternatives": false,
        "label": "Carnatic",
        "position": 0,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:celtic_tune",
        "hasAlternatives": false,
        "label": "Celtic",
        "position": 1,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:chinese_mode",
        "hasAlternatives": false,
        "label": "Chinese",
        "position": 2,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:meter_accent",
        "hasAlternatives": false,
        "label": "Meter",
        "position": 3,
        "required": false,
      },
      {
        "alternativesCount": 0,
        "cardId": "theory:constraint_pack",
        "hasAlternatives": false,
        "label": "Presets",
        "position": 4,
        "required": false,
      },
    ],
    "templateId": "template:world_music",
  },
]
`;
